<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoverPassword"
    android:background="@color/default_background_color" >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_margin="0dp"
	    android:focusable="true" 
		android:focusableInTouchMode="true"
	    >
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="16dp"
			android:textColor="@android:color/black"
			android:textSize="@dimen/small_font_size"
			android:gravity="left"
			android:text="@string/recover_password_instructions"
	        />
	    
	    <TextView 
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:layout_marginLeft="16dp"
	      android:layout_marginRight="16dp"
	      android:layout_marginTop="5dp"
	      android:layout_marginBottom="5dp"
	      android:textSize="@dimen/medium_font_size"
	      android:textColor="@android:color/black"
	      android:gravity="left"
	      android:text="@string/provide_username_label"
	      android:textStyle="bold"
	      />
	    
	    <EditText 
	      android:id="@+id/usernameEditText"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:layout_marginLeft="16dp"
	      android:layout_marginRight="16dp"
	      android:layout_marginTop="5dp"
	      android:layout_marginBottom="5dp"
	      android:textSize="@dimen/medium_font_size"
	      android:textColor="@android:color/black"
	      android:inputType="text"
	      />
	    
	  <TextView 
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:layout_marginLeft="16dp"
	      android:layout_marginRight="16dp"
	      android:layout_marginTop="5dp"
	      android:layout_marginBottom="5dp"
	      android:textSize="@dimen/medium_font_size"
	      android:textColor="@android:color/black"
	      android:gravity="left"
	      android:text="@string/provide_email_address_label"
	      android:textStyle="bold"
	      />
	    
	    <EditText 
	      android:id="@+id/emailAddressEditText"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:layout_marginLeft="16dp"
	      android:layout_marginRight="16dp"
	      android:layout_marginTop="5dp"
	      android:layout_marginBottom="5dp"
	      android:textSize="@dimen/medium_font_size"
	      android:textColor="@android:color/black"
	      android:inputType="textEmailAddress"
	      />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="16dp"
			android:textColor="@android:color/black"
			android:textSize="@dimen/small_font_size"
			android:gravity="left"
			android:text="@string/password_recovery_disclaimer"
	        />
	    
	    <Button 
	      android:id="@+id/resetPasswordButton"
	      android:layout_width="match_parent"
	      android:layout_height="52dp"
	      android:layout_marginLeft="16dp"
	      android:layout_marginRight="16dp"
	      android:layout_marginTop="5dp"
	      android:layout_marginBottom="5dp"
	      android:textSize="@dimen/medium_font_size"
	      android:textColor="@android:color/white"
	      android:gravity="center"
	      android:text="@string/reset_password_button_text"
	      android:paddingTop="5dp"
	      android:paddingBottom="5dp"
	      android:background="@drawable/default_button_background"
	      />
	    
	</LinearLayout>

</ScrollView>
